parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    CTE_ENTERA_NON_NUM
    CTE_REAL_ENDING_BAD
    CTE_REAL_NON_NUM
    OP_ARIT
    OP_LOG
    PAL_RES
    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> constantes variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA
Rule 2     variables -> VARIABLES gpovars
Rule 3     variables -> empty
Rule 4     gpovars -> gpoids PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
Rule 5     gpovars -> gpoids PUNTOS_DOBLES TIPO PUNTO_COMA
Rule 6     gpovars -> empty
Rule 7     gpoids -> IDENT dimens COMA gpoids
Rule 8     gpoids -> IDENT dimens
Rule 9     gpoids -> IDENT opasig COMA gpoids
Rule 10    gpoids -> IDENT COMA gpoids
Rule 11    gpoids -> empty
Rule 12    dimens -> CORCHETE_EMPIEZA valor CORCHETE_TERMINA dimens
Rule 13    dimens -> empty
Rule 14    opasig -> OP_ASIG CTE_ENTERA
Rule 15    opasig -> OP_ASIG IDENT
Rule 16    opasig -> empty
Rule 17    valor -> CTE_ENTERA
Rule 18    valor -> IDENT
Rule 19    constantes -> CONSTANTES grupoconst
Rule 20    constantes -> empty
Rule 21    grupoconst -> IDENT OP_ASIG CTE_REAL PUNTO_COMA
Rule 22    grupoconst -> IDENT OP_ASIG CTE_ENTERA PUNTO_COMA
Rule 23    grupoconst -> IDENT OP_ASIG CTE_REAL PUNTO_COMA grupoconst
Rule 24    grupoconst -> IDENT OP_ASIG CTE_ENTERA PUNTO_COMA grupoconst
Rule 25    grupoconst -> empty
Rule 26    protfuncproc -> PROTOTIPOS gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
Rule 27    protfuncproc -> empty
Rule 28    gpofuncproc -> protfunc
Rule 29    gpofuncproc -> protproc
Rule 30    gpofuncproc -> protproc gpofuncproc
Rule 31    gpofuncproc -> protfunc gpofuncproc
Rule 32    protfunc -> FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
Rule 33    protproc -> PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
Rule 34    protproc -> empty
Rule 35    params -> gpopars PUNTOS_DOBLES TIPO otrospars
Rule 36    params -> empty
Rule 37    otrospars -> PUNTO_COMA params
Rule 38    otrospars -> empty
Rule 39    gpopars -> IDENT maspars
Rule 40    maspars -> COMA gpopars
Rule 41    maspars -> empty
Rule 42    funcproc -> procedimiento funcproc
Rule 43    funcproc -> funcion funcproc
Rule 44    funcproc -> empty
Rule 45    procedimiento -> PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
Rule 46    funcion -> FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
Rule 47    block -> estatuto puntoc block
Rule 48    puntoc -> PUNTO_COMA
Rule 49    block -> empty
Rule 50    estatuto -> si
Rule 51    estatuto -> lfunc
Rule 52    estatuto -> LIMPIA
Rule 53    estatuto -> desde
Rule 54    estatuto -> repetir
Rule 55    estatuto -> mientras
Rule 56    estatuto -> cuando
Rule 57    estatuto -> regresa
Rule 58    estatuto -> asigna
Rule 59    estatuto -> imprime
Rule 60    estatuto -> imprimenl
Rule 61    estatuto -> lee
Rule 62    estatuto -> INTERRUMPE
Rule 63    estatuto -> CONTINUA
Rule 64    estatuto -> empty
Rule 65    si -> SI PAREN_EMPIEZA exprlog PAREN_TERMINA HACER bckesp sino
Rule 66    sino -> SINO bckesp
Rule 67    sino -> empty
Rule 68    bckesp -> estatuto
Rule 69    bckesp -> INICIO block FIN
Rule 70    bckesp -> empty
Rule 71    desde -> DESDE EL VALOR DE asigna HASTA expr INCR CTE_ENTERA bckesp
Rule 72    desde -> DESDE EL VALOR DE asigna HASTA expr DECR CTE_ENTERA bckesp
Rule 73    repetir -> REPETIR block HASTA QUE PAREN_EMPIEZA exprlog PAREN_TERMINA
Rule 74    mientras -> MIENTRAS SE CUMPLA QUE exprlog bckesp
Rule 75    asigna -> IDENT udim OP_ASIG exprlog
Rule 76    cuando -> CUANDO EL VALOR DE IDENT INICIO gposea otro FIN
Rule 77    otro -> OTRO PUNTOS_DOBLES bckesp
Rule 78    otro -> empty
Rule 79    gposea -> SEA gpoconst PUNTOS_DOBLES bckesp gposea
Rule 80    gposea -> empty
Rule 81    gpoconst -> CTE_ALFA masgpoconst
Rule 82    masgpoconst -> COMA gpoconst
Rule 83    masgpoconst -> empty
Rule 84    regresa -> REGRESA PAREN_EMPIEZA exprlog PAREN_TERMINA
Rule 85    udim -> expr udim
Rule 86    udim -> empty
Rule 87    exprlog -> opy
Rule 88    exprlog -> opy O exprlog
Rule 89    opy -> opno
Rule 90    opy -> opno Y opy
Rule 91    opno -> oprel
Rule 92    opno -> NO oprel
Rule 93    oprel -> expr
Rule 94    oprel -> expr OP_REL oprel
Rule 95    expr -> multi
Rule 96    expr -> MAS expr
Rule 97    expr -> MENOS expr
Rule 98    multi -> expo
Rule 99    multi -> expo MULTI multi
Rule 100   multi -> expo DIV multi
Rule 101   multi -> expo MOD multi
Rule 102   multi -> empty
Rule 103   expo -> signo
Rule 104   expo -> signo POTENCIA expo
Rule 105   signo -> termino
Rule 106   signo -> MENOS termino
Rule 107   termino -> IDENT
Rule 108   termino -> IDENT lfunc
Rule 109   termino -> IDENT udim
Rule 110   termino -> CTE_ENTERA
Rule 111   termino -> CTE_REAL
Rule 112   termino -> CTE_ALFA
Rule 113   termino -> VERDADERO
Rule 114   termino -> FALSO
Rule 115   termino -> PAREN_EMPIEZA exprlog PAREN_TERMINA
Rule 116   lfunc -> IDENT parenemp uparams PAREN_TERMINA
Rule 117   lfunc -> IDENT parenemp error PAREN_TERMINA
Rule 118   parenemp -> PAREN_EMPIEZA
Rule 119   imprime -> IMPRIME PAREN_EMPIEZA gpoexp PAREN_TERMINA
Rule 120   imprimenl -> IMPRIMENL PAREN_EMPIEZA gpoexp PAREN_TERMINA
Rule 121   lee -> LEE PAREN_EMPIEZA IDENT PAREN_TERMINA
Rule 122   lee -> LEE PAREN_EMPIEZA IDENT dimens PAREN_TERMINA
Rule 123   gpoexp -> exprlog
Rule 124   gpoexp -> exprlog COMA gpoexp
Rule 125   uparams -> exprlog
Rule 126   uparams -> exprlog COMA uparams
Rule 127   empty -> <empty>

Terminals, with rules where they appear

COMA                 : 7 9 10 40 82 124 126
COMMENT              : 
CONSTANTES           : 19
CONTINUA             : 63
CORCHETE_EMPIEZA     : 12
CORCHETE_TERMINA     : 12
CTE_ALFA             : 81 112
CTE_ENTERA           : 14 17 22 24 71 72 110
CTE_ENTERA_NON_NUM   : 
CTE_REAL             : 21 23 111
CTE_REAL_ENDING_BAD  : 
CTE_REAL_NON_NUM     : 
CUANDO               : 76
CUMPLA               : 74
DE                   : 1 26 45 46 71 72 76
DECR                 : 72
DESDE                : 71 72
DIV                  : 100
EL                   : 71 72 76
FALSO                : 114
FIN                  : 1 26 45 46 69 76
FUNCION              : 32 46 46
HACER                : 65
HASTA                : 71 72 73
IDENT                : 7 8 9 10 15 18 21 22 23 24 32 33 39 45 46 75 76 107 108 109 116 117 121 122
IMPRIME              : 119
IMPRIMENL            : 120
INCR                 : 71
INICIO               : 45 46 69 76
INTERRUMPE           : 62
LEE                  : 121 122
LIMPIA               : 52
MAS                  : 96
MENOS                : 97 106
MIENTRAS             : 74
MOD                  : 101
MULTI                : 99
NO                   : 92
O                    : 88
OP_ARIT              : 
OP_ASIG              : 14 15 21 22 23 24 75
OP_LOG               : 
OP_REL               : 94
OTRO                 : 77
PAL_RES              : 
PAREN_EMPIEZA        : 32 33 45 46 65 73 84 115 118 119 120 121 122
PAREN_TERMINA        : 32 33 45 46 65 73 84 115 116 117 119 120 121 122
POTENCIA             : 104
PROCEDIMIENTO        : 33 45 45
PROGRAMA             : 1 1
PROTOTIPOS           : 26 26
PUNTO                : 
PUNTOS_DOBLES        : 4 5 32 35 46 77 79
PUNTO_COMA           : 4 5 21 22 23 24 26 32 33 37 45 46 48
QUE                  : 73 74
REGRESA              : 84
REPETIR              : 73
SE                   : 74
SEA                  : 79
SI                   : 65
SINO                 : 66
TIPO                 : 4 5 32 35 46
VALOR                : 71 72 76
VARIABLES            : 2
VERDADERO            : 113
Y                    : 90
error                : 117

Nonterminals, with rules where they appear

asigna               : 58 71 72
bckesp               : 65 66 71 72 74 77 79
block                : 1 45 46 47 69 73
constantes           : 1
cuando               : 56
desde                : 53
dimens               : 7 8 12 122
empty                : 3 6 11 13 16 20 25 27 34 36 38 41 44 49 64 67 70 78 80 83 86 102
estatuto             : 47 68
expo                 : 98 99 100 101 104
expr                 : 71 72 85 93 94 96 97
exprlog              : 65 73 74 75 84 88 115 123 124 125 126
funcion              : 43
funcproc             : 1 42 43
gpoconst             : 79 82
gpoexp               : 119 120 124
gpofuncproc          : 26 30 31
gpoids               : 4 5 7 9 10
gpopars              : 35 40
gposea               : 76 79
gpovars              : 2 4
grupoconst           : 19 23 24
imprime              : 59
imprimenl            : 60
lee                  : 61
lfunc                : 51 108
masgpoconst          : 81
maspars              : 39
mientras             : 55
multi                : 95 99 100 101
opasig               : 9
opno                 : 89 90
oprel                : 91 92 94
opy                  : 87 88 90
otro                 : 76
otrospars            : 35
params               : 32 33 37 45 46
parenemp             : 116 117
procedimiento        : 42
program              : 0
protfunc             : 28 31
protfuncproc         : 1
protproc             : 29 30
puntoc               : 47
regresa              : 57
repetir              : 54
si                   : 50
signo                : 103 104
sino                 : 65
termino              : 105 106
udim                 : 75 85 109
uparams              : 116 126
valor                : 12
variables            : 1 45 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . constantes variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA
    (19) constantes -> . CONSTANTES grupoconst
    (20) constantes -> . empty
    (127) empty -> .

    CONSTANTES      shift and go to state 3
    VARIABLES       reduce using rule 127 (empty -> .)
    PROTOTIPOS      reduce using rule 127 (empty -> .)
    PROCEDIMIENTO   reduce using rule 127 (empty -> .)
    FUNCION         reduce using rule 127 (empty -> .)
    PROGRAMA        reduce using rule 127 (empty -> .)

    program                        shift and go to state 1
    constantes                     shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> constantes . variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA
    (2) variables -> . VARIABLES gpovars
    (3) variables -> . empty
    (127) empty -> .

    VARIABLES       shift and go to state 6
    PROTOTIPOS      reduce using rule 127 (empty -> .)
    PROCEDIMIENTO   reduce using rule 127 (empty -> .)
    FUNCION         reduce using rule 127 (empty -> .)
    PROGRAMA        reduce using rule 127 (empty -> .)

    variables                      shift and go to state 5
    empty                          shift and go to state 7

state 3

    (19) constantes -> CONSTANTES . grupoconst
    (21) grupoconst -> . IDENT OP_ASIG CTE_REAL PUNTO_COMA
    (22) grupoconst -> . IDENT OP_ASIG CTE_ENTERA PUNTO_COMA
    (23) grupoconst -> . IDENT OP_ASIG CTE_REAL PUNTO_COMA grupoconst
    (24) grupoconst -> . IDENT OP_ASIG CTE_ENTERA PUNTO_COMA grupoconst
    (25) grupoconst -> . empty
    (127) empty -> .

    IDENT           shift and go to state 9
    VARIABLES       reduce using rule 127 (empty -> .)
    PROTOTIPOS      reduce using rule 127 (empty -> .)
    PROCEDIMIENTO   reduce using rule 127 (empty -> .)
    FUNCION         reduce using rule 127 (empty -> .)
    PROGRAMA        reduce using rule 127 (empty -> .)

    grupoconst                     shift and go to state 8
    empty                          shift and go to state 10

state 4

    (20) constantes -> empty .

    VARIABLES       reduce using rule 20 (constantes -> empty .)
    PROTOTIPOS      reduce using rule 20 (constantes -> empty .)
    PROCEDIMIENTO   reduce using rule 20 (constantes -> empty .)
    FUNCION         reduce using rule 20 (constantes -> empty .)
    PROGRAMA        reduce using rule 20 (constantes -> empty .)


state 5

    (1) program -> constantes variables . protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA
    (26) protfuncproc -> . PROTOTIPOS gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
    (27) protfuncproc -> . empty
    (127) empty -> .

    PROTOTIPOS      shift and go to state 12
    PROCEDIMIENTO   reduce using rule 127 (empty -> .)
    FUNCION         reduce using rule 127 (empty -> .)
    PROGRAMA        reduce using rule 127 (empty -> .)

    protfuncproc                   shift and go to state 11
    empty                          shift and go to state 13

state 6

    (2) variables -> VARIABLES . gpovars
    (4) gpovars -> . gpoids PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
    (5) gpovars -> . gpoids PUNTOS_DOBLES TIPO PUNTO_COMA
    (6) gpovars -> . empty
    (7) gpoids -> . IDENT dimens COMA gpoids
    (8) gpoids -> . IDENT dimens
    (9) gpoids -> . IDENT opasig COMA gpoids
    (10) gpoids -> . IDENT COMA gpoids
    (11) gpoids -> . empty
    (127) empty -> .

    IDENT           shift and go to state 17
    PROTOTIPOS      reduce using rule 127 (empty -> .)
    PROCEDIMIENTO   reduce using rule 127 (empty -> .)
    FUNCION         reduce using rule 127 (empty -> .)
    PROGRAMA        reduce using rule 127 (empty -> .)
    INICIO          reduce using rule 127 (empty -> .)
    PUNTOS_DOBLES   reduce using rule 127 (empty -> .)

    gpovars                        shift and go to state 14
    gpoids                         shift and go to state 15
    empty                          shift and go to state 16

state 7

    (3) variables -> empty .

    PROTOTIPOS      reduce using rule 3 (variables -> empty .)
    PROCEDIMIENTO   reduce using rule 3 (variables -> empty .)
    FUNCION         reduce using rule 3 (variables -> empty .)
    PROGRAMA        reduce using rule 3 (variables -> empty .)
    INICIO          reduce using rule 3 (variables -> empty .)


state 8

    (19) constantes -> CONSTANTES grupoconst .

    VARIABLES       reduce using rule 19 (constantes -> CONSTANTES grupoconst .)
    PROTOTIPOS      reduce using rule 19 (constantes -> CONSTANTES grupoconst .)
    PROCEDIMIENTO   reduce using rule 19 (constantes -> CONSTANTES grupoconst .)
    FUNCION         reduce using rule 19 (constantes -> CONSTANTES grupoconst .)
    PROGRAMA        reduce using rule 19 (constantes -> CONSTANTES grupoconst .)


state 9

    (21) grupoconst -> IDENT . OP_ASIG CTE_REAL PUNTO_COMA
    (22) grupoconst -> IDENT . OP_ASIG CTE_ENTERA PUNTO_COMA
    (23) grupoconst -> IDENT . OP_ASIG CTE_REAL PUNTO_COMA grupoconst
    (24) grupoconst -> IDENT . OP_ASIG CTE_ENTERA PUNTO_COMA grupoconst

    OP_ASIG         shift and go to state 18


state 10

    (25) grupoconst -> empty .

    VARIABLES       reduce using rule 25 (grupoconst -> empty .)
    PROTOTIPOS      reduce using rule 25 (grupoconst -> empty .)
    PROCEDIMIENTO   reduce using rule 25 (grupoconst -> empty .)
    FUNCION         reduce using rule 25 (grupoconst -> empty .)
    PROGRAMA        reduce using rule 25 (grupoconst -> empty .)


state 11

    (1) program -> constantes variables protfuncproc . funcproc PROGRAMA block FIN DE PROGRAMA
    (42) funcproc -> . procedimiento funcproc
    (43) funcproc -> . funcion funcproc
    (44) funcproc -> . empty
    (45) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (46) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (127) empty -> .

    PROCEDIMIENTO   shift and go to state 23
    FUNCION         shift and go to state 24
    PROGRAMA        reduce using rule 127 (empty -> .)

    funcproc                       shift and go to state 19
    procedimiento                  shift and go to state 20
    funcion                        shift and go to state 21
    empty                          shift and go to state 22

state 12

    (26) protfuncproc -> PROTOTIPOS . gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
    (28) gpofuncproc -> . protfunc
    (29) gpofuncproc -> . protproc
    (30) gpofuncproc -> . protproc gpofuncproc
    (31) gpofuncproc -> . protfunc gpofuncproc
    (32) protfunc -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
    (33) protproc -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
    (34) protproc -> . empty
    (127) empty -> .

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for PROCEDIMIENTO resolved as shift
    FUNCION         shift and go to state 28
    PROCEDIMIENTO   shift and go to state 29
    FIN             reduce using rule 127 (empty -> .)

  ! FUNCION         [ reduce using rule 127 (empty -> .) ]
  ! PROCEDIMIENTO   [ reduce using rule 127 (empty -> .) ]

    gpofuncproc                    shift and go to state 25
    protfunc                       shift and go to state 26
    protproc                       shift and go to state 27
    empty                          shift and go to state 30

state 13

    (27) protfuncproc -> empty .

    PROCEDIMIENTO   reduce using rule 27 (protfuncproc -> empty .)
    FUNCION         reduce using rule 27 (protfuncproc -> empty .)
    PROGRAMA        reduce using rule 27 (protfuncproc -> empty .)


state 14

    (2) variables -> VARIABLES gpovars .

    PROTOTIPOS      reduce using rule 2 (variables -> VARIABLES gpovars .)
    PROCEDIMIENTO   reduce using rule 2 (variables -> VARIABLES gpovars .)
    FUNCION         reduce using rule 2 (variables -> VARIABLES gpovars .)
    PROGRAMA        reduce using rule 2 (variables -> VARIABLES gpovars .)
    INICIO          reduce using rule 2 (variables -> VARIABLES gpovars .)


state 15

    (4) gpovars -> gpoids . PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
    (5) gpovars -> gpoids . PUNTOS_DOBLES TIPO PUNTO_COMA

    PUNTOS_DOBLES   shift and go to state 31


state 16

    (6) gpovars -> empty .
    (11) gpoids -> empty .

    PROTOTIPOS      reduce using rule 6 (gpovars -> empty .)
    PROCEDIMIENTO   reduce using rule 6 (gpovars -> empty .)
    FUNCION         reduce using rule 6 (gpovars -> empty .)
    PROGRAMA        reduce using rule 6 (gpovars -> empty .)
    INICIO          reduce using rule 6 (gpovars -> empty .)
    PUNTOS_DOBLES   reduce using rule 11 (gpoids -> empty .)


state 17

    (7) gpoids -> IDENT . dimens COMA gpoids
    (8) gpoids -> IDENT . dimens
    (9) gpoids -> IDENT . opasig COMA gpoids
    (10) gpoids -> IDENT . COMA gpoids
    (12) dimens -> . CORCHETE_EMPIEZA valor CORCHETE_TERMINA dimens
    (13) dimens -> . empty
    (14) opasig -> . OP_ASIG CTE_ENTERA
    (15) opasig -> . OP_ASIG IDENT
    (16) opasig -> . empty
    (127) empty -> .

  ! shift/reduce conflict for COMA resolved as shift
    COMA            shift and go to state 33
    CORCHETE_EMPIEZA shift and go to state 35
    OP_ASIG         shift and go to state 37
    PUNTOS_DOBLES   reduce using rule 127 (empty -> .)

  ! COMA            [ reduce using rule 127 (empty -> .) ]

    dimens                         shift and go to state 32
    opasig                         shift and go to state 34
    empty                          shift and go to state 36

state 18

    (21) grupoconst -> IDENT OP_ASIG . CTE_REAL PUNTO_COMA
    (22) grupoconst -> IDENT OP_ASIG . CTE_ENTERA PUNTO_COMA
    (23) grupoconst -> IDENT OP_ASIG . CTE_REAL PUNTO_COMA grupoconst
    (24) grupoconst -> IDENT OP_ASIG . CTE_ENTERA PUNTO_COMA grupoconst

    CTE_REAL        shift and go to state 38
    CTE_ENTERA      shift and go to state 39


state 19

    (1) program -> constantes variables protfuncproc funcproc . PROGRAMA block FIN DE PROGRAMA

    PROGRAMA        shift and go to state 40


state 20

    (42) funcproc -> procedimiento . funcproc
    (42) funcproc -> . procedimiento funcproc
    (43) funcproc -> . funcion funcproc
    (44) funcproc -> . empty
    (45) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (46) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (127) empty -> .

    PROCEDIMIENTO   shift and go to state 23
    FUNCION         shift and go to state 24
    PROGRAMA        reduce using rule 127 (empty -> .)

    procedimiento                  shift and go to state 20
    funcproc                       shift and go to state 41
    funcion                        shift and go to state 21
    empty                          shift and go to state 22

state 21

    (43) funcproc -> funcion . funcproc
    (42) funcproc -> . procedimiento funcproc
    (43) funcproc -> . funcion funcproc
    (44) funcproc -> . empty
    (45) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (46) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (127) empty -> .

    PROCEDIMIENTO   shift and go to state 23
    FUNCION         shift and go to state 24
    PROGRAMA        reduce using rule 127 (empty -> .)

    funcion                        shift and go to state 21
    funcproc                       shift and go to state 42
    procedimiento                  shift and go to state 20
    empty                          shift and go to state 22

state 22
